2018-05-27  Werner Lemberg  <wl@gnu.org>

	Separate color support from sbit handling.

	* src/ftcommon.h (FTDemo_Handle): New boolean field `use_color'.

	* src/ftcommon.c (FTDemo_New, FTDemo_Update_Current_Flags): Updated.

	* src/ftview.c (Process_Event): Use key `c' to toggle color support.
	(write_header, event_help): Updated.

2018-05-25  Werner Lemberg  <wl@gnu.org>

	Update manpages.

	* src/ftgrid.1, src/ftstring.1, stc/ftview: Document option `-d'.

2018-05-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement grayscale target surface.

	* graph/grblit.c (grBlitGlyphToBitmap): Enable gray target.
	* graph/gblblit.c (gblender_blit_init, GRGB_TO_GRAY, GRGB24_TO_GRAY):
	Implement gray target.

2018-05-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview, ftstring, ftgrid] Change dimension options.

	* src/ftcommon.[hc] (FTDemo_Dispay_New): Use single dimension string as
	an argument, parse it, and initialize accordingly.

	* src/ftgrid.c (usage, parse_cmdline, status): Use single dimension
	string option.
	* src/ftstring.c (usage, parse_cmdline, status): Ditto.
	* src/ftview.c (usage, parse_cmdline, status): Ditto, rename variable
	axis option.

	* src/ftdiff.c, src/ftgamma.c: Updated.

2018-05-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile [unixdev]: Uncouple harfbuzz and libpng.

2018-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblbgra.h: Gamma-corrected variant (disabled).

2018-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblbgra.h: Make it wotk for all destination targets.

2018-05-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fast "powerless" gamma ramps.

	We calculate the lookup tables for the power function using finite
	differences. This is 10 times faster and accurate enough for gamma
	correction.

	* graph/gblender.c (gblender_set_gamma_table): Reimplement using
	finite differences.
	* src/ftstring.c (event_gamma_change): Ditto for the decoration ramp.
